package com.javaxpert.katas.scala.poker

/**
 * empty trait use to manage different ways to sort cards collections
 */
trait Selectable {

}
